<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/txt_symbol_head_network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="30dp"
                    android:src="@mipmap/nonetwork" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_head_network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/network_error"
                    android:textColor="@color/txtcolors" />

                <TextView
                    android:id="@+id/txt_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:padding="15dp"
                    android:text="@string/we_are_facing_internet_connection_problem"
                    android:textColor="@color/txtcolors" />

                <TextView
                    android:id="@+id/txt_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:padding="15dp"
                    android:text="@string/please_check_your_network_connection_and_trya_again"
                    android:textColor="@color/txtcolors" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/txt_retry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="end"
                    android:padding="15dp"
                    android:text="@string/retry"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/txt_gotit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="end"
                    android:padding="15dp"
                    android:text="@string/ok_got_it"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>